crates/pg_syntax/tests/snapshots/postgres_regress/select_implicit@41.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM test_missing_target3;
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..34
    Ident@14..34 "test_missing_target3"
  Ascii59@34..35 ";"

