crates/pg_syntax/tests/snapshots/postgres_regress/select_into@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO ctas_base VALUES (1, 2);"
---
InsertStmt@0..36
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "ctas_base"
  Whitespace@21..22 " "
  SelectStmt@22..34
    Values@22..28 "VALUES"
    Whitespace@28..29 " "
    Ascii40@29..30 "("
    List@30..34
      AConst@30..31
        Iconst@30..31 "1"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..34
        Iconst@33..34 "2"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

